<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/nama_agenda"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="center"
                android:text=":"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edNamaAgenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/bg_edit_custom"
                android:textColor="@color/edittext_color_state"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/deskripsi"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="center"
                android:text=":"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/bg_edit_custom"
                android:textColor="@color/edittext_color_state"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/tgl"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="center"
                android:text=":"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/edTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/bg_edit_custom"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/waktu"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="center"
                android:text=":"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/edWaktu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/bg_edit_custom"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="8dp"
                android:textColor="@color/edittext_color_state"
                android:text="Alamat Tempat" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnPilihLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Pilih Lokasi" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_edit_custom">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spWaktuPengingat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <Button
            android:id="@+id/btnTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/tambah" />
    </LinearLayout>
</ScrollView>