<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:cardCornerRadius="65dp"
        app:cardElevation="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logo"
            android:layout_margin="20dp"
            android:id="@+id/imageView"/>

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:id="@+id/lytInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/str_nama"
                android:textColor="@android:color/white" />
            <EditText
                android:id="@+id/edNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@drawable/bg_edit_custom"
                android:textColor="@color/edittext_color_state"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/str_email"
                android:textColor="@android:color/white" />
            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@drawable/bg_edit_custom"
                android:textColor="@color/edittext_color_state"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/str_passwod"
                android:textColor="@android:color/white" />
            <EditText
                android:id="@+id/edPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@drawable/bg_edit_custom"
                android:textColor="@color/edittext_color_state"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/str_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@android:color/white"
        android:layout_marginStart="16dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytInput" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>